--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/todo-lists-angular/">Todo List</a>
+    <a class="navbar-brand" href="/todo-lists-angular/">To Do List</a>
     <button
       class="navbar-toggler"
       type="button"
