--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,10 +1,10 @@
-<h1 class="container-fluid text-center">My Todo List</h1>
+<h1 class="container-fluid text-center">My To Do List</h1>
 
 <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
 
-<h2 class="container my-3">Your Todos</h2>
+<h2 class="container my-3">Your To Do's</h2>
 
-<p class="container" *ngIf="todos.length === 0; else elseblock">No todo to show</p>
+<p class="container" *ngIf="todos.length === 0; else elseblock">No to Do to show</p>
 
 <ng-template #elseblock>
   <div class="container my-3">
